<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.comscience15.googleimagesearch.activities.ImageFilter" >

    <TextView
        android:id="@+id/tvFilterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/tvFilterTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/sImageSize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sImageType"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sColorFilter"
        android:ems="10"
        android:entries="@array/imgSize_arrays"
        android:prompt="@string/imgSize_prompt" />

    <Spinner
        android:id="@+id/sColorFilter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sImageType"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvFilterTitle"
        android:ems="10"
        android:entries="@array/imgColor_arrays"
        android:prompt="@string/imgColor_prompt" />

    <Spinner
        android:id="@+id/sImageType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etSiteFilter"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sImageSize"
        android:ems="10"
        android:entries="@array/imgType_arrays"
        android:prompt="@string/imgType_prompt" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sImageType"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/sImageType"
        android:text="@string/tvImageType"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/sImageSize"
        android:text="@string/tvImgSize"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sColorFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/sColorFilter"
        android:text="@string/tvColorFilter"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sImageType"
        android:layout_toRightOf="@+id/tvImageType"
        android:ems="10" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etSiteFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/etSiteFilter"
        android:text="@string/tvSiteFilter"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSiteFilter"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="48dp"
        android:layout_toRightOf="@+id/btnSave"
        android:onClick="onBtnCancel"
        android:text="@string/btnCancel" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnCancel"
        android:layout_alignBottom="@+id/btnCancel"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="65dp"
        android:onClick="onBtnSave"
        android:text="@string/btnSave" />

</RelativeLayout>